changes for mitaka

--- a/dockerfiles/nova/Dockerfile
+++ b/dockerfiles/nova/Dockerfile
@@ -1,15 +1,13 @@
 FROM openstack-base
 
-ENV DEBIAN_FRONTEND noninteractive 
+ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get install -y \
-    nova-api \
-    nova-cert \
-    nova-conductor \
-    nova-consoleauth \
-    nova-novncproxy \
-    nova-scheduler \
-    python-novaclient
+  nova-api \
+  nova-conductor \
+  nova-consoleauth \
+  nova-novncproxy \
+  nova-scheduler
 
 ADD setup.sh setup.sh
 ADD run.sh run.sh
