--- a/dockerfiles/openstack_base/Dockerfile
+++ b/dockerfiles/openstack_base/Dockerfile
@@ -1,17 +1,19 @@
-FROM ubuntu:14.04
+FROM ubuntu:16.04
 
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update && apt-get install -y \
         crudini \
         curl \
-        mariadb-client-5.* \
+        mariadb-client \
+        netcat-openbsd \
         python-mysqldb
 
 
 ## Get the packages
 RUN apt-get install software-properties-common -y
-RUN add-apt-repository cloud-archive:mitaka -y
+RUN add-apt-repository cloud-archive:newton -y
 RUN apt-get update -y
 
-RUN apt-get install -y python-openstackclient
+RUN apt-get install python-openstackclient -y
+
